schema simplification
